# adversarial-lab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  test.ipynb  tox.ini  zzz.py
.github/workflows/: build-and-deploy-docs.yml  deploy-docs.yml  publish-to-pypi.yml
adversarial_lab/analytics/: __init__.py  analytics.py  image_tracker.py  loss_tracker.py  noise_statistics_tracker.py  noise_tracker.py  predictions_tracker.py  tracker_base.py
adversarial_lab/arsenal/: __init__.py  attacks_base.py  cw.py  deepfool.py  fsgm.py  pgd.py  smoothfool.py
adversarial_lab/attacker/: __init__.py  attacker_base.py
adversarial_lab/callbacks/: __init__.py  callbacks_base.py  change_params.py  early_stop.py
adversarial_lab/core/: __init__.py  model.py  types.py
adversarial_lab/db/: __init__.py  db_base.py  sqllite.py
adversarial_lab/exceptions/: __init__.py  exceptions.py
adversarial_lab/utils/: __init__.py  conversions.py  plotting.py  video.py
adversary/: setup.py
adversary/core/: __init__.py
adversary/exceptions/: __init__.py  exceptions.py
docs/: conf.py  index.rst  modules.rst
docs/source/: adversarial_lab.analytics.rst  adversarial_lab.attacks.blackbox.rst  adversarial_lab.attacks.rst  adversarial_lab.attacks.whitebox.rst  adversarial_lab.callbacks.rst  adversarial_lab.core.constraints.rst  adversarial_lab.core.losses.rst  adversarial_lab.core.masking.rst  adversarial_lab.core.noise_generators.rst  adversarial_lab.core.optimizers.rst  adversarial_lab.core.penalties.rst  adversarial_lab.core.preprocessing.rst  adversarial_lab.core.rst  adversarial_lab.core.tensor_ops.rst  adversarial_lab.db.rst  adversarial_lab.defenses.rst  adversarial_lab.exceptions.rst  adversarial_lab.rst  adversarial_lab.utils.rst  conf.py  index.rst  modules.rst
examples/: 01 - Basic Whitebox Attack.ipynb  02 - BuiltIn Canonical WhiteBox Attacks.ipynb  05 - Analytics and Tracking.ipynb  06 - Video of Noise Change.ipynb  09 - Benchmarking.ipynb  blackbox.ipynb  bounded_noise_misclassification.ipynb  nontargeted_misclassification.ipynb  popular_attacks.ipynb  targeted_misclassification copy.ipynb  targeted_misclassification.ipynb  test.ipynb  whitebox.db
tests/core/: test_losses.py  (+7 more)
(+118 files in other folders)
