[metadata]
name = adversarial-lab
version = 0.0.3
author = Pavan Reddy
author_email = preddy.osdev@gmail.com
description = A unified library for performing adversarial attacks on ML model to test their defense.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pavanreddyml/adversarial-lab
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires = 

[options.package_data]
* = *.md, *.txt

[options.extras_require]
testing =
    pytest
    pytest-cov